--- a/style.css
+++ b/style.css
@@ -171,8 +171,12 @@ button{
     background-size: cover;
     display: flex;
     height: 100vh;
-    gap: 50px;
+    gap: 200px;
     align-items: center; 
+}
+
+.ariana{
+    margin-top: 10%;
 }
 .concert{
     width: 1153px;
@@ -333,6 +337,9 @@ button{
         width: 100%;
         
     }
+    .act2 img{
+        margin: 0;
+    }
     .concert{
         width:100%
     }
@@ -342,10 +349,15 @@ button{
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        gap: 20px;
         /* justify-content: space-around; */
         
         width: 100%;
     }
+    .ariana{
+        margin-top: 0;
+    }
+    
     .say{
         border: none;
         box-shadow: none;
