--- a/style.css
+++ b/style.css
@@ -23,6 +23,9 @@ h1{
 h2{
     font-size: 50px;
 }
+ul{
+    list-style: none;
+}
 .s-t{
     font-family: 'Red Hat Display', sans-serif; 
     color: #0053c8; 
@@ -36,6 +39,35 @@ h2{
     display: flex;
     justify-content: center;
 }
+  .dark-mode {
+    --navbar-color: #FFF;
+    --navbar-bg-color: #000;  
+  }
+  
+  /* Navbar */
+  .navbar {  
+    display:flex;
+    align-items:center; 
+    justify-content:space-between;   
+    padding:10px;
+    font-size:26px;
+    font-weight: bold;
+    color:var(--navbar-color);
+  }
+  .navbar__links { 
+    display:flex;  
+  }
+  .navbar__link { 
+    padding: 47px;
+  }
+  .navbar__link > a { 
+    color:var(--navbar-color);
+    text-decoration:none;
+  }
+  .burger {
+    display:none;
+  }
+  
 /* le debut  */
 
 .header{
@@ -269,6 +301,32 @@ button{
     height: 100vh;
     padding: 10%;
 }
+
+.clickAnim {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background: black;
+    position: absolute;
+    z-index: 9000;
+    transform: scale(0);
+    transform-origin: center;
+    animation: clickAnim 1s ease-in-out;
+}
+
+@keyframes clickAnim {
+    0% {
+        transform: scale(0);
+    }
+    50% {
+        transform: scale(2);
+        opacity: 1;
+    }
+    0% {
+        transform: scale(0);
+        opacity: 0;
+    }
+}
         /* media  */
 @media (max-width:1300px){
     
@@ -358,9 +416,12 @@ button{
         margin-top: 0;
     }
     
+    
     .say{
         border: none;
         box-shadow: none;
+        width: 70%;
+        
     }
     .act3 {
         width: 100%;
@@ -379,3 +440,121 @@ button{
         flex-direction: column;
     }
 }
+/*  Small device */
+@media screen and (max-width:767.98px) {
+    .navbar__links { 
+      overflow:hidden;
+      display:flex;
+      flex-direction:column;
+      width:0;
+      height:calc(100vh - 65px);  
+      position:absolute;
+      top:65px;
+      right:0;     
+      background:var(--navbar-bg-color);     
+      transform: translateX(110%);
+      transition: all .5s ease-in-out;
+    }
+    .show-nav .navbar__links { 
+      
+      width:100vw;    
+      transform: translateX(0);
+    } 
+    .navbar__link {    
+      transform: translateX(101%);
+      transition: all .5s ease-in-out;
+    }
+    
+    .show-nav .navbar__link  {        
+      transform: translateX(0);    
+    }   
+    .navbar__link > a {
+      display:block;
+      padding:1rem;
+      font-size:1.6rem;
+      color:var(--navbar-color);  
+      transition: all .4s ease-in-out;
+    }
+    .navbar__link > a:hover {
+      padding-left:2rem;
+      letter-spacing:5px;
+    }
+    
+    /* Toggle menu */
+    .burger {
+      display:block;
+      position:relative;
+      padding:0;
+      width:45px;
+      height:45px;
+      border:none;
+      background:transparent;
+      cursor:pointer;
+    }
+    .bar {
+      display:block;    
+      width:45px;
+      height:4px;  
+      border-radius:3px;
+      background:var(--navbar-color); 
+      transition: all .5s ease-in-out;   
+    }
+    .bar::before, .bar::after {
+      content:"";
+      width:45px;
+      height:4px;
+      position:absolute; 
+      left:0;  
+      background:var(--navbar-color); 
+      border-radius:3px;    
+      transition: all .5s ease-in-out;
+    }
+    .bar::before {
+      transform:translateY(-12px)
+    }
+    .bar::after {
+      transform:translateY(12px)
+    }
+    .show-nav .bar {
+      width:0;
+      background:transparent;    
+    }
+    .show-nav .bar::before {
+      transform:rotate(45deg);
+    }
+    .show-nav .bar::after {
+      transform:rotate(-45deg);
+    }
+    
+    /* Bonus - Animations */
+    .show-nav .first {      
+      transition: all 1s ease-out;
+    } 
+    .show-nav .second {      
+      transition: all 1.1s ease-out;
+    } 
+    .show-nav .third {      
+      transition: all 1.2s ease-out;
+    } 
+    .show-nav .four {      
+      transition: all 1.3s ease-out;
+    } 
+    .show-nav .fifth {      
+      transition: all 1.4s ease-out;
+    }
+  }
+  @media screen and (min-width:768px) {
+    .navbar__link > a::after {
+      display:block;
+      content:"";
+      width:0;
+      height:1px;
+      background:var(--navbar-color);
+      transition:width .4s;
+    }
+    .navbar__link:hover > a::after {
+      width:100%;
+    }
+  }
+  
+    
